  * po/hu.po:
    - new translation, thanks to Gabor Kelemen 
  * softwarestore/view/basepane.py:
    - fix crash when no adjustment is available (LP: #432126)
  * setup.py:
    - auto-generate softwarestore/version.py on build to ensure
      version information is always valid 
  * softwarestore/view/appdetailsview.py:
    - set user-agent string to software-store
  
  [ Andrew Higginson ]
  * debian/control:
    - better description
    - add depedency to python-sexy (LP: #432173)
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 17 Sep 2009 14:11:06 +0200

software-store (0.3.4) karmic; urgency=low

  * softwarestore/view/appview.py:
    - fix crash in on_iter_children() LP: #427630
  * merged lp:~sil/software-store/run-uninstalled, many
    thanks to Stuart Langridge 
  * merged lp:~sil/software-store/disable-install-button, many
    thanks to Stuart Langridge (this is cleaner than the previous
    way)
  * merged lp:~rugby471/software-store/software-store-andrew, many
    thanks to Andrew Higginson
  * softwarestore/db/update.py:
    - fix i18n reading from the app-install-data files
    - add X-Ubuntu-Gettext-Domain support
    - Don't crash if we cannot write to ./data/xapian, 
      print that we cannot write to the directory.
  * softwarestore/view/appdetailsview.py
    - extend show_app() to take (appname, pkgname)
  * softwarestore/view/appview.py:
    - ensure correct icons for overlapping application names
    - fix bug in the "only installed" filter (LP: #430838)
  * softwarestore/view/widgets/imagedialog.py:
    - make the download fully threaded
  * softwarestore/db/database.py:
    - cleanup and move common code here
  * softwarestore/app.py:
    - fix crash when no pane is active (LP: #430912)
  * utils/update-software-store:
    - fix crash when setlocale() fails (LP: #431099)
  * softwarestore/view/appdetailsview.py:
    - shwo proper error message (LP: #431100)
  * softwarestore/view/dialogs.py: