@@ -14,6 +14,9 @@ software-store (0.3.5) UNRELEASED; urgency=low
       version information is always valid 
   * softwarestore/view/appdetailsview.py:
     - set user-agent string to software-store
+  * softwarestore/view/pendingview.py:
+    - do not crash if a transaction can not be canceled, but log
+      a error instead
   
   [ Andrew Higginson ]
   * debian/control:
